XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Fixed the help text button alignment.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -118,13 +118,15 @@
   }
 
   .help-text-button {
-    display: inline-block;
-    width: 56px;
+    display: inline-flex;
+    align-items: center;
+    height: 40px;
+    margin-right: 15px;
+    float: right;
+    vertical-align: top;
     overflow: hidden;
     z-index: @z-index-mask - 1;
     cursor: pointer;
-    vertical-align: top;
-    margin-top: 9px;
 
 
     &:after {
@@ -154,13 +156,5 @@
 ._0-240, ._240-360, ._360-540, ._540-720, ._720-960 {
   .wizard-step-navigator-and-toolbar {
     padding-left: 0;
-  }
-}
-
-.form-panel {
-  &._0-240, &._240-360, &._360-540 {
-    .help-text-button {
-      width: 45px;
-    }
   }
 }
